# RF-Arsenal--OS-V2.0

./: .gitignore  AUDIT_README.md  AUDIT_SUMMARY.txt  CHANGELOG.md  CODEBASE_AUDIT_2024_12.md  CODE_STATUS.md  CRITICAL_FIXES.md  DEEP_AUDIT_REPORT.md  FINAL_SECURITY_STATUS.md  LEGAL_DISCLAIMER.md  LICENSE  PRODUCTION_READINESS_REPORT.md  PR_CREATION_INSTRUCTIONS.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_VALIDATION_REPORT.md  VERIFICATION_REPORT.md  WIRESHARK_INTEGRATION_COMPLETE.md  WIRESHARK_INTEGRATION_SUMMARY.md  create_all_modules.sh  demo.py  pyproject.toml  rf_arsenal.py  rf_arsenal_os.py  update_manager.py  verify_system.sh
core/: AI_INSTRUCTIONS.md  __init__.py  ai_command_center.py  anonymization.py  arsenal_ai_integration.py  arsenal_ai_v3.py  arsenal_cli.py  config_manager.py  data_retrieval.py  emergency.py  event_bus.py  hardware_abstraction.py  hardware_bladerf.py  hardware_controller.py  hardware_interface.py  mission_profiles.py  network_mode.py  offline_capability.py  opsec_monitor.py  red_team_agent.py  security_validator.py  stealth.py  stealth_enforcement.py  stealth_hardening.py  system_integrator.py  traffic_obfuscation.py  transmission_monitor.py  user_modes.py  validation.py
core/ai_v2/: __init__.py  agent_framework.py  attack_planner.py  enhanced_ai.py  local_llm.py  memory_store.py  online_intel.py  rag_engine.py
core/ai_v3/: __init__.py  local_llm.py
core/api/: __init__.py  api_security.py  rest_api.py  websocket_server.py
core/automation/: __init__.py  mission_scripting.py  scheduler.py  session_recorder.py  triggers.py
core/bladerf/: __init__.py  agc.py  frequency_hopping.py  mimo.py  xb200.py
core/calibration/: __init__.py  rf_calibration.py
core/dsp/: __init__.py  channel_coding.py  modulation.py  ofdm.py  primitives.py  synchronization.py
core/fpga/: __init__.py  dsp_accelerator.py  fpga_controller.py  fpga_image_manager.py  lte_accelerator.py  stealth_fpga.py
core/hardware/: __init__.py  bladerf_driver.py
core/iot/: __init__.py  home_automation.py  smart_lock.py  smart_meter.py  zigbee.py  zwave.py
core/protocols/: __init__.py  asn1.py  gtp.py  mac.py  nas.py  rrc.py  s1ap.py
core/sdr/: __init__.py  soapy_backend.py
core/security/: __init__.py
core/vehicle/: __init__.py  bluetooth_vehicle.py  can_bus.py  gps_spoof.py  key_fob.py  rolljam.py  tpms.py  uds.py  v2x.py
core/visualization/: __init__.py  constellation.py  geolocation.py  signal_plotter.py  spectrum.py
distro/: __init__.py  build_arsenal_os.sh
docs/: CODE_STATUS.md  COMMAND_CHEAT_SHEET.md  FISSURE_INTEGRATION.md  GEOLOCATION_GUIDE.md  GEOLOCATION_TRACKING.md  INSTALLATION_GUIDE.md  MULTI_SDR_SUPPORT.md  PHONE_TARGETING.md  PROJECT_COMPLETE.md  STEALTH_OPERATIONS_GUIDE.md  UPDATE_GUIDE.md  USB_DEPLOYMENT.md  VOLTE_INTERCEPTION.md  WIRESHARK_INTEGRATION.md
fpga/constraints/: bladerf_micro_xA9.sdc
fpga/scripts/: build_fpga.py
install/: build_raspberry_pi_image.sh  create_portable_usb.sh  create_usb_installer.sh  cross_platform_install.sh  first_boot_wizard.py  hardware_wizard.py  install.sh  install_ai.sh  install_fissure.sh  install_oai.sh  install_sdr_support.sh  install_srsran.sh  install_wireshark.sh  install_yatebts.sh  module_installer.sh  pi_detect.py  platform_detector.py  quick_install.sh  requirements.txt  rfarsenal_launcher.sh  test_wireshark_integration.sh  universal_installer.py  verify_deployment.py
modules/: __init__.py
modules/adsb/: __init__.py  adsb_attacks.py
modules/ai/: __init__.py  ai_controller.py  anomaly_detector.py  (+6 more)
security/: IDENTITY_MANAGEMENT_README.md  MESH_NETWORKING_README.md  __init__.py  anti_forensics.py  authentication.py  counter_intelligence.py  covert_storage.py  extreme_measures.py  identity_management.py  independent_audit.py  mesh_networking.py  physical_security.py
tests/: __init__.py
ui/: __init__.py  device_fingerprint_panel.py  geolocation_map_panel.py  main_gui.py  threat_dashboard.py
(+166 files in other folders)
